# mooncake

./: .gitignore  README.md
FFmpegShim/: CMakeLists.txt  bmp_encoder.cpp  common.h  decoder_shim.cpp  export.h  frame_reader.cpp  rtsp_client.cpp  scaler.cpp  scratch.cpp  scratch2.cpp  util.cpp
FFmpegShim/include/libavcodec/: avcodec.h  vaapi.h  vdpau.h  xvmc.h
FFmpegShim/include/libavdevice/: avdevice.h  version.h
FFmpegShim/include/libavfilter/: avfilter.h  version.h
FFmpegShim/include/libavformat/: avformat.h  avio.h
FFmpegShim/include/libavutil/: bswap.h  common.h  intreadwrite.h
FFmpegShim/include/libpostproc/: postprocess.h  version.h
FFmpegShim/include/libswresample/: swresample.h  version.h
LotusCore/: LastErrorContext.cs  LotusCore.csproj  ShimIOException.cs  ShimUtil.cs
LotusCore/Abstractions/: IFrameEncoder.cs  IFrameReader.cs  IFrameScaler.cs
LotusCore/Common/: AVCodecId.cs  AVFrameHandle.cs  AVPacketHandle.cs  AVPixelFormat.cs  LastErrorContext.cs  ShimIOException.cs  ShimUtil.cs
LotusCore/Demux/: FrameReaderHandle.cs  IFrameReader.cs
LotusCore/Frames/: FrameEncoderHandle.cs  FrameScalerHandle.cs  IFrameEncoder.cs  IFrameScaler.cs  VideoProperties.cs
LotusCore/Handles/: AVCodecId.cs  AVFrameHandle.cs  AVPacketHandle.cs  AVPixelFormat.cs  FrameEncoderHandle.cs  FrameReaderHandle.cs  FrameScalerHandle.cs  VideoProperties.cs
LotusCore/Helpers/: AVPacketStream.cs
LotusCore/IO/: AVPacketStream.cs  StreamIOContext.cs
LotusCoreTest/: LotusCoreTest.csproj  Program.cs
LotusShim/: CMakeLists.txt  frame_encoder.cpp  frame_reader.cpp  frame_scaler.cpp  library.h  objects.cpp  stream.cpp  stream_scratch.cpp
Mooncake/: Mooncake.csproj  Program.cs
Mooncake/FFmpegShim/: AVCodecId.cs  AVFrame.cs  AVPacket.cs  AVPacketStream.cs  AVPixelFormat.cs  FrameEncoder.cs  FrameScaler.cs  PosixError.cs  RtspClient.cs  ShimUtil.cs
